--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"description": "A HackBar for new firefox (Firefox Quantum). This addon is writed in webextension and alternatives to the XUL version of origanal Hackbar.",
 	"manifest_version": 2,
 	"name": "HackBar",
-	"version": "1.1.2",
+	"version": "1.1.6",
 	"author": "Khoiasd",
 	"homepage_url": "https://github.com/khoiasd/hackbar",
 	"icons": {
@@ -11,6 +11,6 @@
 	"permissions": ["tabs", "webRequest", "webRequestBlocking", "<all_urls>"],
 	"devtools_page": "theme/hackbar.html",
 	"background": {
-		"scripts": ["background/background.js"]
+		"scripts": ["background.js"]
 	}
 }
