--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 	"icons": {
 		"48": "icons/icon.png"
 	},
-	"permissions": ["tabs", "webRequest", "webRequestBlocking", "<all_urls>"],
+	"permissions": ["tabs", "activeTab", "webRequest", "webRequestBlocking", "<all_urls>"],
 	"devtools_page": "theme/hackbar.html",
 	"background": {
 		"scripts": ["background.js"]
