--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-	"description": "A HackBar for new firefox (Firefox Quantum). This addon is writed in webextension and alternatives to the XUL version of origanal Hackbar.",
+	"description": "A HackBar for new firefox (Firefox Quantum). This addon is written in webextension and alternatives to the XUL version of original Hackbar.",
 	"manifest_version": 2,
 	"name": "HackBar",
-	"version": "1.1.8",
+	"version": "1.1.10",
 	"author": "Khoiasd",
 	"homepage_url": "https://github.com/khoiasd/hackbar",
 	"icons": {
